--- a/src/App.css
+++ b/src/App.css
@@ -14,29 +14,38 @@ body {
   flex-wrap: wrap;
   padding: 0;
   justify-content: space-between;
-  }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.auto-w {
+  width: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.image-container {
+  position: relative;
+  transition: transform 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-container:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.image-container:hover .img-overlay {
+  opacity: 1;
+}
+
+.img-overlay {
+  position: absolute;
+  background-color: rgb(0, 0, 0, 0.8);
+  width: 92.5%;
+  transition: ease 0.5s;
+  opacity: 0;
+  font-size: 18px;
+  padding: 20px;
+  text-align: center;
+}
+
+.icons {
+  width: auto;
 }
