--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@ body {
   transition: transform 0.2s;
 }
 
-
 .image-container img {
   width: 100%;
   height: 400px;
@@ -59,8 +58,9 @@ body {
   width: auto;
 }
 
-.icon-favourites svg, .icon-watched svg {
-	cursor: pointer;
+.icon-favourites svg,
+.icon-watched svg {
+  cursor: pointer;
 }
 
 .favourites-title {
@@ -74,7 +74,7 @@ body {
 }
 .favourites-containerpart {
   background-color: #fca311;
-  color:#001219;
+  color: #001219;
   margin: -1px;
 }
 
