--- a/src/App.css
+++ b/src/App.css
@@ -1,119 +1,1 @@
-body {
-  background-color: #001219;
-  color: #ffffff;
-}
-
-/* .movies-container > .row {
-  overflow-y: auto;
-  flex-wrap: nowrap;
-  padding: 0;
-}
- */
-.movies-container > .search-results {
-  overflow-y: hidden;
-  flex-wrap: wrap;
-  padding: 0;
-  justify-content: space-between;
-}
-
-.auto-w {
-  width: auto;
-}
-
-.image-container {
-  position: relative;
-  transition: transform 0.2s;
-}
-
-.image-container img {
-  width: 100%;
-  height: 400px;
-}
-
-.image-container:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-.image-container:hover .img-overlay {
-  opacity: 1;
-}
-
-.img-overlay {
-  position: absolute;
-  background-color: rgb(0, 0, 0, 0.8);
-  width: 100%;
-  transition: ease 0.5s;
-  opacity: 0;
-  font-size: 18px;
-  padding: 20px;
-  text-align: center;
-}
-
-.movies-overlay {
-  width: 92.2%;
-}
-
-.icons {
-  width: auto;
-}
-
-.icon-favourites svg,
-.icon-watched svg {
-  cursor: pointer;
-}
-
-.favourites-title {
-  text-align: center;
-  padding-left: 16px;
-  padding-top: 5px;
-}
-
-.favourites-container {
-  max-width: 80%;
-}
-.favourites-containerpart {
-  background-color: #fca311;
-  color: #001219;
-  margin: -1px;
-}
-
-.favourites-close-button {
-  background-color: #001219;
-}
-
-.overlay-addFavorites {
-  font-size: 16px;
-  margin-right: 5px;
-}
-
-.card-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-container__is-watched {
-  position: absolute;
-  display: none;
-}
-
-.remove-favourites {
-  color: #ffffff;
-  font-size: 15px;
-}
-
-.no-favourites, .no-watched {
-  margin-left: 16px;
-  font-size: 15px;
-  font-weight: 500;
-}
-
-/* default: do not show the fill by year */
-.fill-year-wrapper {
-  display: none;
-}
-
-.fill-year-wrapper .dropdown-toggle-split::after {
-    margin-left: 5px;
-}
+body{background-color:#001219;color:#fff}.auto-w{width:auto}.icons{width:auto}.icon-favourites svg,.icon-watched svg{cursor:pointer}.favourites-title{text-align:center;padding-left:16px;padding-top:5px}.favourites-container{max-width:80%}.favourites-containerpart{background-color:#fca311;color:#001219;margin:-1px}.favourites-close-button{background-color:#001219}.overlay-addFavorites{font-size:16px;margin-right:5px}.remove-favourites{color:#fff;font-size:15px}.no-favourites,.no-watched{margin-left:16px;font-size:15px;font-weight:500}.image-container{position:relative;transition:transform .2s}.image-container img{width:100%;height:400px}.image-container:hover{cursor:pointer;transform:scale(1.1)}.image-container:hover .img-overlay{opacity:1}.image-container .img-overlay{position:absolute;background-color:rgba(0,0,0,.8);width:100%;transition:ease .5s;opacity:0;font-size:18px;padding:20px;text-align:center}.movies-overlay{width:92.2%}.card-container{display:flex;align-items:center;justify-content:center}.card-container__is-watched{position:absolute;display:none}.movies-container .search-results{overflow-y:hidden;flex-wrap:wrap;padding:0;justify-content:space-between}.fill-year-wrapper{display:none}.fill-year-wrapper .dropdown-toggle-split::after{margin-left:5px}/*# sourceMappingURL=App.css.map */
