--- a/src/assets/scss/_results.scss
+++ b/src/assets/scss/_results.scss
@@ -3,8 +3,9 @@
   transition: transform 0.2s;
 
   img {
-    width: 100%;
+    width: 250px;
     height: 400px;
+    object-fit: cover;
   }
 
   &:hover {
@@ -18,7 +19,8 @@
   .img-overlay {
     position: absolute;
     background-color: rgb(0, 0, 0, 0.8);
-    width: 100%;
+    width: 200px;
+    text-align: center;
     transition: ease 0.5s;
     opacity: 0;
     font-size: 18px;
