Add modal for movie details

--- a/src/assets/scss/_modals.scss
+++ b/src/assets/scss/_modals.scss
@@ -43,6 +43,14 @@
   display: none;
 }
 
+.alert-added-watched {
+  width: 250px;
+  margin-right: 50px;
+  text-align: center;
+  padding: 5px;
+  margin-bottom: 0;
+  display: none;
+}
 
 .alert-remove-favourites {
   width: 250px;
